Fix extra space below footer

--- a/css/app.css
+++ b/css/app.css
@@ -31,7 +31,7 @@ iframe {
 	margin: 0 auto -2.9em;
 }
 .push {
-	height: 3em;
+	height: 2.9em;
 }
 
 #copyright {
